💄 Higher z-index on nav (fixes #4)

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,3 @@
-.nav {
-  padding: 0 var(--gap);
-  max-width: var(--main-content);
-}
-
 .h1 {
   margin-top: var(--big-gap);
   margin-bottom: var(--gap);
@@ -14,8 +9,4 @@
 
 .tableAll {
   overflow-x: auto;
-}
-
-.goBtn {
-  z-index: -1 !important;
 }
